samples/_failures_safe/1761127483_d67d07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a2bb6f13.c: In function ‘main’:
./samples/SAFE/__tmp_a2bb6f13.c:167:25: error: missing terminating " character
  167 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_a2bb6f13.c:167:9: error: expected expression at end of input
  167 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_a2bb6f13.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a2bb6f13.c:167:9: error: expected declaration or statement at end of input
